2010-09-29  U-neige\zender  <zender@uci.edu>

	* NCO 4.0.5 release procedure:
 	Changes since nco-4_0_4: fxm
	cd ~/nco;cvs tag -d nco-4_0_5;cvs tag -d nco-4_0_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.5 release"
	cvs tag -c nco-4_0_5;cvs tag -c nco-4_0_5-1

	* Add informative message when using DAP

2010-09-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.4 release procedure:
 	Changes since nco-4_0_3: chunking everywhere, ncrename bugfix, ncks -m
	cd ~/nco;cvs tag -d nco-4_0_4;cvs tag -d nco-4_0_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.4 release"
	cvs tag -c nco-4_0_4;cvs tag -c nco-4_0_4-1

	* Use longer but more bullet-proof and less warning-prone netcdf.h
	backwards compatibility token definitions in nco_typ.h

	* Finish handling strtod()/strtol() returns
	Corner case where sng_cnv_rcd == NUL not handled?
	'man strtol' has convoluted description using errno for this

	* Henry fixed ncap2 dsort() bug

	* Clean-up calendar types and acronyms so building with CC=g++ works

2010-09-23  Charlie Zender  <zender@uci.edu>

	* Document that ncecat does not process coordinate variables

	* Adding string conversion checking to nco_lmt.c, nco_att_utl.c
	caused one ephemeral new ncrcat regression? Which has mysteriously
	disappeared.... 

	* Fix harmless problem that valgrind flagged where ncap2 relied on
	an uninitialized value of dmn->cid in nco_var_fll().

	* Rebuild ncap2...seems to work fine

	* Sort dmn_sct, var_sct in nco.h, change var_sct.is_fix_var flag from int to short

	* Cleanup chunking/deflation initialization

2010-09-19  Charlie Zender  <zender@uci.edu>

	* Note that ncks 4.0.3 and earlier suffer from a bug Henry caught
	in nco_cpy_var_dfn_lmt() where the shuffle and deflate arguments
	to nco_def_var_deflate() were reversed. This would cause
	propagation of deflate and shuffle attributes from in.nc to out.nc
	to go awry when shuffle or deflate, but not both, were true.

	* Continue error handling of string-conversion, now strtod()
