@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.605 2010-09-30 01:06:31 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.606 2010-10-05 19:59:44 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -520,6 +520,7 @@ You can also retrieve the source of tagged versions directly
 world peace?
 <li><b>NCO 4.0.5</b>: (<i>In progress</i>)
 netCDF4 compound types?;
+Fix <tt>ncks</tt> <a href="#bug_ncks_cnk">chunking bug</a>;
 Stride works with DAP;
 <li><b>NCO 4.0.4</b>:
 Chunking in all operators; preserve deflation; <tt>ncks</tt> print formatting;
@@ -1418,6 +1419,20 @@ these versions of NCO.
 </ul>
 
 <ul><b>Operator-specific Run-time Problems:</b>
+<!-- http://nco.sf.net#bug_ncks_cnk -->
+<a name="bug_ncks_cnk"></a>
+<li><i><tt>ncks</tt> chunking bug:</i>
+Versions 4.0.3&mdash;4.0.4 of <tt>ncks</tt> contain a bug which
+triggers a core-dump when hyperslabbing (along a non-record
+dimension) a netCDF4-format input file into a netCDF4-format output
+file, e.g., <tt>ncks -d 0,1,lat in4.nc out4.nc</tt>. 
+Two workarounds that do not require NCO upgrades (or downgrades) are
+to explicitly specify chunking with, e.g., 
+<tt>ncks --cnk_plc=all -d 0,1,lat in4.nc out4.nc</tt>, or, to use 
+<tt>ncea</tt> instead of <tt>ncks</tt> for hyperslabbing, e.g.,
+<tt>ncea -d 0,1,lat in4.nc out4.nc</tt> (<tt>ncea</tt> does a no-op
+when there is only one input file).
+
 <!-- http://nco.sf.net#bug_ncrename_dot -->
 <a name="bug_ncrename_dot"></a>
 <li><i><tt>ncrename</tt> erroneous error exit:</i>
