@@ -1,10 +1,14 @@
-2010-09-29  U-neige\zender  <zender@uci.edu>
+2010-10-05  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.0.5 release procedure:
- 	Changes since nco-4_0_4: fxm
+ 	Changes since nco-4_0_4: ncks chunk bug
 	cd ~/nco;cvs tag -d nco-4_0_5;cvs tag -d nco-4_0_5-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.5 release"
 	cvs tag -c nco-4_0_5;cvs tag -c nco-4_0_5-1
+
+	* Fix ncks chunking bug http://nco.sf.net#bug_ncks_cnk
+
+2010-09-29  U-neige\zender  <zender@uci.edu>
 
 	* Add informative message when using DAP
 
